[package]
name = "erlang-engine-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = { version = "=0.22.0", features = ["trace"] }
libherokubuildpack = { version = "=0.22.0", default-features = false, features = ["download", "fs", "log", "tar"] }
serde = "1"
sha2 = "0.10.8"
tempfile = "3"
toml = "0.8"
ureq = "2"
tar = { version = "0.4", default-features = false }
hex = "0.4.3"
flate2 = { version = "1", default-features = false, features = ["zlib"] }

[dev-dependencies]
libcnb-test = "=0.22.0"
serde_json = "1"
