[package]
name = "erlang-otp-buildpack"
rust-version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
libcnb = { version = "=0.22.0", features = ["trace"] }
serde = "1"
ureq = "2"
tar = { version = "0.4", default-features = false }
flate2 = { version = "1", default-features = false, features = ["zlib"] }

[dev-dependencies]
libcnb-test = "=0.22.0"
serde_json = "1"
tempfile = "3"
